--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,3 +7,13 @@
 	margin: 0;
 }
 
+canvas {
+	background-color: #eee;
+	background-size: 20px 20px;
+	background-position: 0 0, 10px 10px;
+	background-image:
+	linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc),
+	linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc);
+	display: block;
+	z-index: 0;
+}
