--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,31 @@
 	margin: 0;
 }
 
+body, html {
+	height: 100%;
+}
+
+body {
+	display: flex;
+	flex-direction: column;
+}
+
+h1 {
+	xposition: absolute;
+}
+
+.gifarator {
+	height: 100%;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+
+.canvasRow {
+	display: flex;
+	height: 100%;
+}
+
 canvas {
 	background-color: #eee;
 	background-size: 20px 20px;
@@ -16,4 +41,17 @@ canvas {
 	linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc);
 	display: block;
 	z-index: 0;
+}
+
+.frames {
+	border: 1px dotted red;
+	overflow-y: auto;
+	height: 100%;
+	max-width: 320px;
+}
+
+.frames img {
+	width: 100%;
+	height: auto;
+	border: 1px dotted green;
 }
